# pde_solver

./: Performance.md  README.md
src/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  Solver.cpp  Solver.h  config.txt  main.cpp
